# lexicon

./: .gitignore  README.md  pyproject.toml
examples/notes/: expense-policy.md  onboarding.md  remote-work-addendum.md
src/lexicon/: __init__.py  cli.py  index.py  ingest.py  models.py  reconcile.py
tests/: test_index.py  test_ingest.py  test_reconcile.py
