[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexicon-local"
version = "0.1.0"
description = "Local-first semantic pointer search over personal documents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lexicon" }]
dependencies = [
  "numpy>=1.26",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.0"]

[project.scripts]
lexicon = "lexicon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lexicon"]

[tool.pytest.ini_options]
testpaths = ["tests"]

